Refactor Framework
